<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue">

    <LinearLayout
        android:layout_width="@dimen/linear_layout_width_340dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top|center"
        android:layout_marginTop="@dimen/linear_layout_margin_100dp"
        android:padding="@dimen/linear_layout_padding_30dp"
        android:background="@drawable/layout_shape">

        <TextView
            android:text="@string/signup_textview_title"
            style="@style/default_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <!-- TODO: inputType почему то не работает как надо, пришлось digits юзать (можно попробовать inputFilter-->
        <EditText
            android:id="@+id/signupEditTextFirstName"
            android:hint="@string/signup_edittext_hint_first_name"
            android:digits="@string/allowed_text_char"
            android:inputType="textPersonName"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            style="@style/default_edittext"

            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp" />

        <EditText
            android:id="@+id/signupEditTextLastName"
            android:hint="@string/signup_edittext_hint_last_name"
            android:digits="@string/allowed_text_char"
            android:inputType="textPersonName"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            style="@style/default_edittext"

            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp" />

        <EditText
            android:id="@+id/signupEditTextEmail"
            android:hint="@string/signup_edittext_hint_email"
            android:digits="@string/allowed_any_char"
            android:inputType="textEmailAddress"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            style="@style/default_edittext"

            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp" />

        <EditText
            android:id="@+id/signupEditTextPassword"
            android:hint="@string/signup_edittext_hint_password"
            android:digits="@string/allowed_any_char"
            android:inputType="textPassword"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            style="@style/default_edittext"

            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp" />

    </LinearLayout>

    <Button
        android:id="@+id/signupButtonMain"
        android:text="@string/signup_button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/main_active_button_margin_140dp"
        style="@style/default_main_active_button" />

    <TextView
        android:id="@+id/signupTextViewToLogin"
        android:text="@string/signup_textview_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/signature_textview_jump_margin_100dp"
        android:clickable="true"
        style="@style/default_text" />

</FrameLayout>