<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <LinearLayout
        android:id="@+id/signupLinearLayout"
        android:layout_width="@dimen/linear_layout_width_340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:background="@drawable/layout_shape"
        android:orientation="vertical"
        android:padding="@dimen/linear_layout_padding_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20">

        <TextView
            style="@style/default_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup_textview_title" />

        <!-- TODO: inputType почему то не работает как надо, пришлось digits юзать (можно попробовать inputFilter-->
        <EditText
            android:id="@+id/signupEditTextFirstName"
            style="@style/default_edittext"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp"
            android:digits="@string/allowed_text_char"

            android:hint="@string/signup_edittext_hint_first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signupEditTextLastName"
            style="@style/default_edittext"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp"
            android:digits="@string/allowed_text_char"

            android:hint="@string/signup_edittext_hint_last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signupEditTextEmail"
            style="@style/default_edittext"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp"
            android:digits="@string/allowed_any_char"

            android:hint="@string/signup_edittext_hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signupEditTextPassword"
            style="@style/default_edittext"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp"
            android:digits="@string/allowed_any_char"

            android:hint="@string/signup_edittext_hint_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/signupButtonMain"
        style="@style/default_main_active_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_button_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupLinearLayout"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/signupTextViewToLogin"
        style="@style/default_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/signup_textview_to_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupButtonMain"
        app:layout_constraintVertical_bias="0.10" />

</androidx.constraintlayout.widget.ConstraintLayout>