<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/onboardingTwoTextViewTitle"
        style="@style/default_title_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:text="@string/onboarding_textview_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardingTwoTextViewTitle" />

    <TextView
        android:id="@+id/onboardingTwoTextViewSkip"
        style="@style/default_clickable_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/splash_textview_login_margin_100dp"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/onboarding_textview_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/default_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="@dimen/onboarding_textview_text_margin_140dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/onboarding_textview_text_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />


</androidx.constraintlayout.widget.ConstraintLayout>